# material-egui

./: .env  Cargo.toml  README.MD  README.md  install.sh
examples/: demo.rs  web.rs
src/: lib.rs
src/themes/: logic.rs  mod.rs  palette.rs
src/widgets/: button.rs
