[package]
name = "material-egui"
version = "0.1.5"
edition = "2021"
authors = ["ToastXC contact@toastxc.xyz"]
license = "GPL-3.0-only"
description = "Material Design color theme generator for Egui"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { git = "https://github.com/emilk/egui", branch = "master" }

material-colors = { version = "0.2.1", default-features = false }


[dev-dependencies]
egui = { git = "https://github.com/emilk/egui", branch = "master" }
# if you're using eframe:
eframe = { git = "https://github.com/emilk/egui", branch = "master" }
material-egui = {path = "."}

dotenv = "0.15.0"


[[example]]
name = "demo"
path = "examples/demo.rs"
#[[example]]
#name = "palette"
#path = "examples/palette.rs"
